WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289112
[Wasm] GC structs shouldn't need to visit fields if there's no ref fields
https://bugs.webkit.org/show_bug.cgi?id=289112
Summary
[Wasm] GC structs shouldn't need to visit fields if there's no ref fields
Keith Miller
Reported
2025-03-04 13:46:29 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-04 13:46:43 PST
<
rdar://problem/146141202
>
Keith Miller
Comment 2
2025-03-04 13:56:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41874
EWS
Comment 3
2025-03-04 18:32:50 PST
Committed
291603@main
(b7b433a1d53e): <
https://commits.webkit.org/291603@main
> Reviewed commits have been landed. Closing PR #41874 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug